# divine-meta

./: Cargo.toml  DockerFile  Dockerfile
src/: errors.rs  lib.rs  main.rs
src/database/: champion.rs  champion_star.rs  mod.rs  prelude.rs
src/routes/: get_champions.rs  mod.rs
