[package]
name = "divine-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.2"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
sea-orm = { version = "0.10.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
